--- a/remotecontrolwindow.ui
+++ b/remotecontrolwindow.ui
@@ -2258,6 +2258,19 @@
     <string>my live vieo</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="backPushButton">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>20</y>
+     <width>41</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Back</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
